# flux-image-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  PRESENTATION_README.md  README.md  RELEASE_SUMMARY.md  SD_WEBUI_SETUP.md  enhanced_main.py  flux_generator.py  main.py  prompt_tester_main.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
config/project/: env.example  setup.py
data/input/: .gitkeep
docs/: ADETAILER_INTEGRATION.md  DEMO_RESULTS.md  ENHANCED_FEATURES.md  ENHANCED_ROTATION.md  FLUX_PRO_ROTATION.md  PROMPT_ENHANCEMENT_SUMMARY.md  PROMPT_TESTER.md  README.md  SD_WEBUI_INTEGRATION.md
examples/: enhanced_prompts_demo.py  enhanced_prompts_demo_offline.py  generate_adetailer_example.py  generate_all_variations_example.py  generate_flux_rotation_example.py  generate_rotation_example.py
scripts/: migrate_to_v2.sh  run.sh  run_adetailer.sh  run_adetailer_batch.sh  run_all_variations.sh  run_enhanced.sh  run_enhanced_rotation.sh  run_flux_adetailer.sh  run_flux_rotation.sh  run_flux_rotation_v3.sh  run_manual.sh  run_portrait_variations.sh  run_process_existing.sh  run_prompt_tester.sh  run_rotation.sh  run_sd_webui.sh
src/: __init__.py
src/flux_generator/: __init__.py  enhanced_generator.py  generator.py  prompt_tester.py  prompts.py  test_api.py
src/flux_generator/api/: __init__.py  base.py  client.py  models.py
src/flux_generator/cli/: __init__.py  (+2 more)
tests/: conftest.py  test_adetailer.py  test_all_variations.py  test_env.py  test_flux_rotation.py  test_portrait_setup.py  test_rotation.py  test_utils.py
(+16 files in other folders)
